--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <section>
             <h2>Summary</h2>
-            <p>Motivated and detail-oriented web development enthusiast with a strong foundation in HTML and a passion for creating user-friendly websites. <br\>Seeking opportunities to apply technical skills and contribute to innovative web projects.</p>
+            <p>Motivated and detail-oriented web development enthusiast with a strong foundation in HTML and a passion for creating user-friendly websites. <br>Seeking opportunities to apply technical skills and contribute to innovative web projects.</p>
         </section>
 
         <section>
